; ModuleID = '/home/carl/AnghaBench/libgit2/tests/pack/extr_indexer.c_test_pack_indexer__out_of_order_with_connectivity_checks.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/pack/extr_indexer.c_test_pack_indexer__out_of_order_with_connectivity_checks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { i32, i32, i32, i32 }

@GIT_INDEXER_OPTIONS_INIT = common dso_local global %struct.TYPE_8__ zeroinitializer, align 4
@.str = private unnamed_addr constant [2 x i8] c".\00", align 1
@out_of_order_pack = common dso_local global i32 0, align 4
@out_of_order_pack_len = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_pack_indexer__out_of_order_with_connectivity_checks() #0 {
  %1 = alloca %struct.TYPE_8__, align 4
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_7__, align 4
  %4 = bitcast %struct.TYPE_8__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %4, i8* align 4 bitcast (%struct.TYPE_8__* @GIT_INDEXER_OPTIONS_INIT to i8*), i64 4, i1 false)
  store i32* null, i32** %2, align 8
  %5 = bitcast %struct.TYPE_7__* %3 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %5, i8 0, i64 16, i1 false)
  %6 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %1, i32 0, i32 0
  store i32 1, i32* %6, align 4
  %7 = call i32 @git_indexer_new(i32** %2, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 0, i32* null, %struct.TYPE_8__* %1)
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* @out_of_order_pack, align 4
  %11 = load i32, i32* @out_of_order_pack_len, align 4
  %12 = call i32 @git_indexer_append(i32* %9, i32 %10, i32 %11, %struct.TYPE_7__* %3)
  %13 = call i32 @cl_git_pass(i32 %12)
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @git_indexer_commit(i32* %14, %struct.TYPE_7__* %3)
  %16 = call i32 @cl_git_pass(i32 %15)
  %17 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %3, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @cl_assert_equal_i(i32 %18, i32 3)
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %3, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @cl_assert_equal_i(i32 %21, i32 3)
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %3, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @cl_assert_equal_i(i32 %24, i32 3)
  %26 = load i32*, i32** %2, align 8
  %27 = call i32 @git_indexer_free(i32* %26)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_indexer_new(i32**, i8*, i32, i32*, %struct.TYPE_8__*) #2

declare dso_local i32 @git_indexer_append(i32*, i32, i32, %struct.TYPE_7__*) #2

declare dso_local i32 @git_indexer_commit(i32*, %struct.TYPE_7__*) #2

declare dso_local i32 @cl_assert_equal_i(i32, i32) #2

declare dso_local i32 @git_indexer_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
